--- a/src/styles.css
+++ b/src/styles.css
@@ -2,174 +2,253 @@
 
 @theme {
   /* Colors */
-  --color-white: #FFFFFF;
+  --color-white: #ffffff;
   --color-black: #000000;
 
   /* Gray */
   --color-gray-900: #143757;
-  --color-gray-800: #153B5E;
-  --color-gray-700: #294E70;
+  --color-gray-800: #153b5e;
+  --color-gray-700: #294e70;
   --color-gray-600: #476785;
   --color-gray-500: #668099;
-  --color-gray-400: #91A6BA;
-  --color-gray-300: #C8D4DF;
-  --color-gray-200: #E2E8EE;
-  --color-gray-100: #EFF2F6;
-  --color-gray-50: #F9FAFC;
+  --color-gray-400: #91a6ba;
+  --color-gray-300: #c8d4df;
+  --color-gray-200: #e2e8ee;
+  --color-gray-100: #eff2f6;
+  --color-gray-50: #f9fafc;
 
   /* Red */
-  --color-red-900: #7F1D1D;
-  --color-red-800: #991B1B;
-  --color-red-700: #B91C1C;
-  --color-red-600: #DC2626;
-  --color-red-500: #EF4444;
-  --color-red-400: #F87171;
-  --color-red-300: #FCA5A5;
-  --color-red-200: #FECACA;
-  --color-red-100: #FEE2E2;
-  --color-red-50: #FEF2F2;
+  --color-red-900: #7f1d1d;
+  --color-red-800: #991b1b;
+  --color-red-700: #b91c1c;
+  --color-red-600: #dc2626;
+  --color-red-500: #ef4444;
+  --color-red-400: #f87171;
+  --color-red-300: #fca5a5;
+  --color-red-200: #fecaca;
+  --color-red-100: #fee2e2;
+  --color-red-50: #fef2f2;
 
   /* Orange */
-  --color-orange-900: #C75000;
-  --color-orange-800: #D25704;
-  --color-orange-700: #DF5D07;
-  --color-orange-600: #E9640C;
-  --color-orange-500: #F48106;
-  --color-orange-400: #F89627;
-  --color-orange-300: #FDBC72;
-  --color-orange-200: #FED6A9;
-  --color-orange-100: #FFECD6;
-  --color-orange-50: #FFF5EB;
+  --color-orange-900: #c75000;
+  --color-orange-800: #d25704;
+  --color-orange-700: #df5d07;
+  --color-orange-600: #e9640c;
+  --color-orange-500: #f48106;
+  --color-orange-400: #f89627;
+  --color-orange-300: #fdbc72;
+  --color-orange-200: #fed6a9;
+  --color-orange-100: #ffecd6;
+  --color-orange-50: #fff5eb;
 
   /* Yellow */
-  --color-yellow-900: #78350F;
-  --color-yellow-800: #92400E;
-  --color-yellow-700: #B45309;
-  --color-yellow-600: #D97706;
-  --color-yellow-500: #F59E0B;
-  --color-yellow-400: #FBBF24;
-  --color-yellow-300: #FCD34D;
-  --color-yellow-200: #FDE68A;
-  --color-yellow-100: #FEF3C7;
-  --color-yellow-50: #FFFBEB;
+  --color-yellow-900: #78350f;
+  --color-yellow-800: #92400e;
+  --color-yellow-700: #b45309;
+  --color-yellow-600: #d97706;
+  --color-yellow-500: #f59e0b;
+  --color-yellow-400: #fbbf24;
+  --color-yellow-300: #fcd34d;
+  --color-yellow-200: #fde68a;
+  --color-yellow-100: #fef3c7;
+  --color-yellow-50: #fffbeb;
 
   /* Green */
-  --color-green-900: #064E3B;
-  --color-green-800: #065F46;
+  --color-green-900: #064e3b;
+  --color-green-800: #065f46;
   --color-green-700: #047857;
   --color-green-600: #059669;
-  --color-green-500: #10B981;
-  --color-green-400: #34D399;
-  --color-green-300: #6EE7B7;
-  --color-green-200: #A7F3D0;
-  --color-green-100: #D1FAE5;
-  --color-green-50: #ECFDF5;
+  --color-green-500: #10b981;
+  --color-green-400: #34d399;
+  --color-green-300: #6ee7b7;
+  --color-green-200: #a7f3d0;
+  --color-green-100: #d1fae5;
+  --color-green-50: #ecfdf5;
 
   /* Teal */
-  --color-teal-900: #134E4A;
-  --color-teal-800: #115E59;
-  --color-teal-700: #0F766E;
-  --color-teal-600: #0D9488;
-  --color-teal-500: #14B8A6;
-  --color-teal-400: #2DD4BF;
-  --color-teal-300: #5EEAD4;
-  --color-teal-200: #99F6E4;
-  --color-teal-100: #CCFBF1;
-  --color-teal-50: #F0FDFA;
+  --color-teal-900: #134e4a;
+  --color-teal-800: #115e59;
+  --color-teal-700: #0f766e;
+  --color-teal-600: #0d9488;
+  --color-teal-500: #14b8a6;
+  --color-teal-400: #2dd4bf;
+  --color-teal-300: #5eead4;
+  --color-teal-200: #99f6e4;
+  --color-teal-100: #ccfbf1;
+  --color-teal-50: #f0fdfa;
 
   /* Cyan */
-  --color-cyan-900: #164E63;
-  --color-cyan-800: #155E75;
-  --color-cyan-700: #0E7490;
-  --color-cyan-600: #0891B2;
-  --color-cyan-500: #06B6D4;
-  --color-cyan-400: #22D3EE;
-  --color-cyan-300: #67E8F9;
-  --color-cyan-200: #A5F3FC;
-  --color-cyan-100: #CFFAFE;
-  --color-cyan-50: #ECFEFF;
+  --color-cyan-900: #164e63;
+  --color-cyan-800: #155e75;
+  --color-cyan-700: #0e7490;
+  --color-cyan-600: #0891b2;
+  --color-cyan-500: #06b6d4;
+  --color-cyan-400: #22d3ee;
+  --color-cyan-300: #67e8f9;
+  --color-cyan-200: #a5f3fc;
+  --color-cyan-100: #cffafe;
+  --color-cyan-50: #ecfeff;
 
   /* Light Blue */
-  --color-light-blue-900: #0C4E6E;
-  --color-light-blue-800: #075A83;
-  --color-light-blue-700: #0070A9;
-  --color-light-blue-600: #0291C5;
-  --color-light-blue-500: #01A7E1;
-  --color-light-blue-400: #3AC5F8;
-  --color-light-blue-300: #7EDAFC;
-  --color-light-blue-200: #BAE6FD;
-  --color-light-blue-100: #E0F2FE;
-  --color-light-blue-50: #F0F9FF;
+  --color-light-blue-900: #0c4e6e;
+  --color-light-blue-800: #075a83;
+  --color-light-blue-700: #0070a9;
+  --color-light-blue-600: #0291c5;
+  --color-light-blue-500: #01a7e1;
+  --color-light-blue-400: #3ac5f8;
+  --color-light-blue-300: #7edafc;
+  --color-light-blue-200: #bae6fd;
+  --color-light-blue-100: #e0f2fe;
+  --color-light-blue-50: #f0f9ff;
 
   /* Blue */
-  --color-blue-900: #1E3A8A;
-  --color-blue-800: #1E40AF;
-  --color-blue-700: #1D4ED8;
-  --color-blue-600: #2563EB;
-  --color-blue-500: #3B82F6;
-  --color-blue-400: #60A5FA;
-  --color-blue-300: #93C5FD;
-  --color-blue-200: #BFDBFE;
-  --color-blue-100: #DBEAFE;
-  --color-blue-50: #EFF6FF;
+  --color-blue-900: #1e3a8a;
+  --color-blue-800: #1e40af;
+  --color-blue-700: #1d4ed8;
+  --color-blue-600: #2563eb;
+  --color-blue-500: #3b82f6;
+  --color-blue-400: #60a5fa;
+  --color-blue-300: #93c5fd;
+  --color-blue-200: #bfdbfe;
+  --color-blue-100: #dbeafe;
+  --color-blue-50: #eff6ff;
 
   /* Indigo */
-  --color-indigo-900: #312E81;
-  --color-indigo-800: #3730A3;
-  --color-indigo-700: #4338CA;
-  --color-indigo-600: #4F46E5;
-  --color-indigo-500: #6366F1;
-  --color-indigo-400: #818CF8;
-  --color-indigo-300: #A5B4FC;
-  --color-indigo-200: #C7D2FE;
-  --color-indigo-100: #E0E7FF;
-  --color-indigo-50: #EEF2FF;
+  --color-indigo-900: #312e81;
+  --color-indigo-800: #3730a3;
+  --color-indigo-700: #4338ca;
+  --color-indigo-600: #4f46e5;
+  --color-indigo-500: #6366f1;
+  --color-indigo-400: #818cf8;
+  --color-indigo-300: #a5b4fc;
+  --color-indigo-200: #c7d2fe;
+  --color-indigo-100: #e0e7ff;
+  --color-indigo-50: #eef2ff;
 
   /* Purple */
-  --color-purple-900: #4C1D95;
-  --color-purple-800: #5B21B6;
-  --color-purple-700: #6D28D9;
-  --color-purple-600: #7C3AED;
-  --color-purple-500: #8B5CF6;
-  --color-purple-400: #A78BFA;
-  --color-purple-300: #C4B5FD;
-  --color-purple-200: #DDD6FE;
-  --color-purple-100: #EDE9FE;
-  --color-purple-50: #F5F3FF;
+  --color-purple-900: #4c1d95;
+  --color-purple-800: #5b21b6;
+  --color-purple-700: #6d28d9;
+  --color-purple-600: #7c3aed;
+  --color-purple-500: #8b5cf6;
+  --color-purple-400: #a78bfa;
+  --color-purple-300: #c4b5fd;
+  --color-purple-200: #ddd6fe;
+  --color-purple-100: #ede9fe;
+  --color-purple-50: #f5f3ff;
 
   /* Pink */
   --color-pink-900: #831843;
-  --color-pink-800: #9D174D;
-  --color-pink-700: #BE185D;
-  --color-pink-600: #DB2777;
-  --color-pink-500: #EC4899;
-  --color-pink-400: #F472B6;
-  --color-pink-300: #F9A8D4;
-  --color-pink-200: #FBCFE8;
-  --color-pink-100: #FCE7F3;
-  --color-pink-50: #FDF2F8;
+  --color-pink-800: #9d174d;
+  --color-pink-700: #be185d;
+  --color-pink-600: #db2777;
+  --color-pink-500: #ec4899;
+  --color-pink-400: #f472b6;
+  --color-pink-300: #f9a8d4;
+  --color-pink-200: #fbcfe8;
+  --color-pink-100: #fce7f3;
+  --color-pink-50: #fdf2f8;
 
   /* Rose */
   --color-rose-900: #881337;
-  --color-rose-800: #9F1239;
-  --color-rose-700: #BE123C;
-  --color-rose-600: #E11D48;
-  --color-rose-500: #F43F5E;
-  --color-rose-400: #FB7185;
-  --color-rose-300: #FDA4AF;
-  --color-rose-200: #FECDD3;
-  --color-rose-100: #FFE4E6;
-  --color-rose-50: #FFF1F2;
+  --color-rose-800: #9f1239;
+  --color-rose-700: #be123c;
+  --color-rose-600: #e11d48;
+  --color-rose-500: #f43f5e;
+  --color-rose-400: #fb7185;
+  --color-rose-300: #fda4af;
+  --color-rose-200: #fecdd3;
+  --color-rose-100: #ffe4e6;
+  --color-rose-50: #fff1f2;
+
+  --shadow-md: 0px 1px 2px 0px rgba(101, 153, 202, 0.27);
 }
 
 .afl-body {
-  @apply bg-gray-100 text-gray-900 flex flex-col min-h-screen;
+  @apply flex min-h-screen flex-col bg-gray-100 text-gray-900 antialiased;
 }
 
 .afl-header {
-  @apply bg-white shadow-md px-4 py-3;
+  @apply z-10 flex items-center justify-between gap-2 bg-white px-4 py-3 shadow-md;
+}
+
+.afl-header .afl-header__back-button {
+  @apply flex h-8 w-8 items-center justify-center rounded text-lg leading-7 font-bold hover:bg-gray-200;
 }
 
 .afl-header .afl-header__title {
-  @apply text-lg font-bold leading-7;
+  @apply flex-auto text-lg leading-7 font-bold;
+}
+
+.afl-main {
+  @apply flex h-full w-full flex-grow;
+}
+
+.afl-sidebar {
+  @apply flex w-full flex-col gap-4 bg-white p-4 shadow-md md:w-3xs;
+}
+
+.afl-heading-1 {
+  @apply text-xl leading-7 font-semibold text-gray-900;
+}
+
+.afl-eyebrow {
+  @apply text-light-blue-500 text-xs font-semibold tracking-wide uppercase;
+}
+
+.afl-icon--info {
+  @apply text-light-blue-500 h-6 w-6 bg-contain bg-center bg-no-repeat;
+  background-image: url('./assets/icons/info.svg');
+}
+
+.afl-alert {
+  @apply relative flex items-start gap-4 rounded border p-4 shadow-md;
+}
+
+.afl-alert__icon {
+  @apply mt-1 h-5 w-5 flex-shrink-0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.afl-alert__content {
+  @apply text-sm leading-5 text-gray-900;
+}
+.afl-alert__content strong {
+  @apply mb-1 block font-semibold;
+}
+.afl-alert__close {
+  @apply absolute top-3 right-3 text-xl text-gray-400 hover:text-gray-600;
+}
+
+/* Alert Variants */
+.afl-alert--error {
+  @apply border-red-500 bg-red-50 text-red-800;
+}
+.afl-alert--error .afl-alert__icon {
+  background-image: url('./assets/icons/error.svg');
+}
+.afl-alert--error .afl-alert__content strong {
+  @apply text-red-700;
+}
+
+.afl-alert--success {
+  @apply border-green-500 bg-green-50 text-green-800;
+}
+.afl-alert--success .afl-alert__icon {
+  background-image: url('./assets/icons/check.svg');
+}
+.afl-alert--success .afl-alert__content strong {
+  @apply text-green-700;
+}
+
+.afl-alert--info {
+  @apply border-light-blue-500 bg-light-blue-50 text-light-blue-800;
+}
+.afl-alert--info .afl-alert__icon {
+  background-image: url('./assets/icons/info.svg');
+}
+.afl-alert--info .afl-alert__content strong {
+  @apply text-light-blue-700;
 }
